--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,3 +61,6 @@ color:black;
 .styleStrikethrough{
   text-decoration: line-through !important;
 }
+.styleUnderlineStrikethrough{
+  text-decoration: underline line-through !important;
+}
